# Meta

./: CMakeLists.txt  main.cpp
DerivedData/Meta/: info.plist
Meta/: Meta.1  main.cpp
Meta.xcodeproj/: project.pbxproj
Meta/meta/: access.h  common.h  common.hpp  creation.h  inspection.h  inspection.hpp  modification.h  modification.hpp  transformation.h  types.h  types.hpp  utilities.h
Meta/meta/access/: advance.h  at.h  begin.h  end.h  get_pattern.h  get_pattern.hpp  get_types.h  get_types.hpp  iteration.h  iteration.hpp  iterator.h  iterator.hpp  next.h
Meta/meta/common/: identity.h  identity.hpp  max.h  max.hpp  select.h  select.hpp
Meta/meta/creation/: instantiate.h  instantiate.hpp  lazy_instantiate.h  lazy_instantiate.hpp  reinstantiate.h  repattern.h  repattern.hpp
Meta/meta/inspection/: comparable.h  comparable.hpp  count.h  count.hpp  distance.h  find.h  find.hpp  has_next.h  iteration.hpp  size.h  size.hpp
Meta/meta/modification/: clear.h  deletion.h  erase.h  head.h  (+18 more)
Meta/tests/: run_test.sh  test_all.sh  untested.sh
examples/: CMakeLists.txt
examples/access/: at.cpp
meta/: access.hpp  common.hpp  creation.hpp  inspection.hpp  modification.hpp  types.hpp
meta/access/: advance.hpp  at.hpp  begin.hpp  end.hpp  get_pattern.hpp  get_types.hpp  iteration.hpp  next.hpp
meta/common/: identity.hpp  max.hpp
meta/creation/: instantiate.hpp  lazy_instantiate.hpp  reinstantiate.hpp  repattern.hpp
meta/inspection/: distance.hpp  find.hpp  has_next.hpp  iteration.hpp  size.hpp
meta/modification/: clear.hpp  deletion.hpp  erase.hpp  head.hpp  insert.hpp  insertion.hpp  partition.hpp  pop_back.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  replace.hpp  reverse.hpp  split.hpp  subsequence.hpp  subset.hpp  substitution.hpp  tail.hpp  transformation.hpp
meta/types/: arithmetic.hpp  at_key.hpp  comparison.hpp  create_map.hpp  decimal.hpp  erase_key.hpp  insert_value.hpp  integer.hpp  map.hpp  map_value.hpp  min_value.hpp  multimap.hpp  pair.hpp  pattern_list.hpp  rational.hpp  type_list.hpp  value_list.hpp
tests/: CMakeLists.txt  run_test.sh  test_all.sh  untested.sh
utilities/: create_header.sh  get_guard.sh
(+287 files in other folders)
