###################################################################################################
##
##      Информация о проекте
##
###################################################################################################

project(Meta)
cmake_minimum_required(VERSION 2.8)

###################################################################################################
##
##      Опции компиляции
##
###################################################################################################

set(WARNING_FLAGS "-Wall -Wextra -pedantic -Werror")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ${WARNING_FLAGS}")

message("++ Build type: ${CMAKE_BUILD_TYPE}")

###################################################################################################
##
##      Подпроекты
##
###################################################################################################

include_directories(${CMAKE_SOURCE_DIR})

add_subdirectory(examples)
add_subdirectory(tests)
